Add IntelliJ plugin configuration & 'Surround in parentheses' walking skeleton